<resources>
    <string name="app_name">NewHome</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_add">Add</string>
    <string name="title_message">Message</string>
    <string name="title_myself">Myself</string>
    <string name="LuncherMessage1">一点安家</string>
    <string name="LuncherMessage2">愿您找到安心舒适的家</string>

</resources>