<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/navigation_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/navigation_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/navigation_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_myself"
        android:icon="@drawable/navigation_myself"
        android:title="@string/title_myself" />

</menu>