<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.newhome.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.android.newhome.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.android.newhome.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.android.newhome.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_myself"
        android:name="com.android.newhome.ui.myself.MyselfFragment"
        android:label="@string/title_myself"
        tools:layout="@layout/fragment_myself" />
</navigation>